--- a/project4/blog.html
+++ b/project4/blog.html
@@ -56,5 +56,5 @@
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script  src="app.js"></script>
+<script  src="js/app.js"></script>
 </html>
