--- a/project4/index.html
+++ b/project4/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -41,7 +43,7 @@
           </nav>
           </section>
 <div class="wrapper">
-    
+    <h1 class="display-1 text-dark"> Recent Posts</h1>
         <div id="post-container">
 
             
