--- a/project4/index.html
+++ b/project4/index.html
@@ -42,20 +42,22 @@
             </div>
           </nav>
           </section>
-<div class="wrapper">
-    <h1 class="display-1 text-dark"> Recent Posts</h1>
-        <div id="post-container">
-
-            
-        </div>
-        <div id="popup" class="bg-black">
-
-            <div id="full-post" class="container-fluid text-light"></div>
-            <button id='back' class="btn btn-primary"></button>
-         
-        </div>
-        <button class="btn btn-primary"></button>
-</div>
+<section class="index-post-container">
+  <div class="wrapper">
+      <h1 class="display-1 text-dark"> Recent Posts</h1>
+          <div id="post-container">
+  
+  
+          </div>
+          <div id="popup" class="bg-black">
+  
+              <div id="full-post" class="container-fluid text-light"></div>
+              <button id='back' class="btn btn-primary"></button>
+  
+          </div>
+          <button class="btn btn-primary"></button>
+  </div>
+</section>
 </body>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script  src="js/app.js"></script>
