--- a/project4/index.html
+++ b/project4/index.html
@@ -55,7 +55,7 @@
               <button id='back' class="btn btn-primary"></button>
   
           </div>
-          <button class="btn btn-primary"></button>
+          <a href="blog.html"><button class="btn btn-primary">Click to view all posts</button></a>
   </div>
 </section>
 </body>
