--- a/project4/index.html
+++ b/project4/index.html
@@ -44,7 +44,7 @@
           </section>
 <section class="index-post-container">
   <div class="wrapper">
-      <h1 class="display-1 text-dark"> Recent Posts</h1>
+      <h1 class="display-1 my-5 text-dark"> Recent Posts</h1>
           <div id="post-container">
   
   
