--- a/project4/blog.html
+++ b/project4/blog.html
@@ -42,7 +42,7 @@
           </section>
 <div class="wrapper">
     
-        <div id="post-container">
+        <div id="post-container2">
 
             
         </div>
