--- a/project4/gallery.html
+++ b/project4/gallery.html
@@ -68,7 +68,7 @@
 
 </body>
 
-<script src="app.js" ></script>
+<script src="js/app.js" ></script>
 <script src="image-gallery.js"></script>
-<script src="lazyload.js"></script>
+<script src="js/lazyload.js"></script>
 </html>
