--- a/project4/about.html
+++ b/project4/about.html
@@ -259,6 +259,6 @@ Mr. Mehta has led his team in analyzing the Trading Partner agreements, determin
 </section>
 </body>
 
-<script src="app.js"></script>
-<script src="lazyload.js"></script>
+<script src="js/app.js"></script>
+<script src="js/lazyload.js"></script>
 </html>
