--- a/project4/index.html
+++ b/project4/index.html
@@ -42,7 +42,7 @@
             </div>
           </nav>
           </section>
-<section class="index-post-container">
+<section class="index-post-container my-5">
   <div class="wrapper">
       <h1 class="display-1 my-5 text-dark"> Recent Posts</h1>
           <div id="post-container">
@@ -55,6 +55,15 @@
               <button id='back' class="btn btn-primary"></button>
   
           </div>
+          <a href="blog.html"><button class="btn btn-primary">Click to view all posts</button></a>
+  </div>
+</section>
+
+<section class="index-post-container my-5">
+  <div class="wrapper">
+      <h1 class="display-1 my-5 text-dark"> About Me</h1>
+         
+          
           <a href="blog.html"><button class="btn btn-primary">Click to view all posts</button></a>
   </div>
 </section>
