--- a/project4/index.html
+++ b/project4/index.html
@@ -61,11 +61,25 @@
 
 <section class="index-post-container my-5">
   <div class="wrapper">
-      <h1 class="display-1 my-5 text-dark"> About Me</h1>
-         
-          
-          <a href="blog.html"><button class="btn btn-primary">Click to view all posts</button></a>
-  </div>
+    <div class="card text-center">
+      <div class="card-header">
+        About Me
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Sanjeev Mehta</h5>
+        <p class="card-text">am a Certified Public Accountant by profession,
+           with over eighteen years of financial management consulting experience.
+           I specialize in helping federal agencies improve their business
+            processes by reviewing their control environment, assessing risks, and
+             identifying existing controls in their financial statement line items
+              processes. 
+</p>
+        <a href="about.html" class="btn btn-primary">Go somewhere</a>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
+    </div>
 </section>
 </body>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
