--- a/project4/index.html
+++ b/project4/index.html
@@ -67,17 +67,17 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">Sanjeev Mehta</h5>
-        <p class="card-text">am a Certified Public Accountant by profession,
+        <p class="card-text lead p-5">am a Certified Public Accountant by profession,
            with over eighteen years of financial management consulting experience.
            I specialize in helping federal agencies improve their business
             processes by reviewing their control environment, assessing risks, and
              identifying existing controls in their financial statement line items
               processes. 
 </p>
-        <a href="about.html" class="btn btn-primary">Go somewhere</a>
+        <a href="about.html" class="btn btn-primary">Read More</a>
       </div>
       <div class="card-footer text-muted">
-        2 days ago
+        Author
       </div>
     </div>
 </section>
