--- a/project4/index.html
+++ b/project4/index.html
@@ -62,6 +62,7 @@
 <section class="index-post-container my-5">
   <div class="wrapper">
     <div class="card text-center">
+      <img class="card-img-top" src="gallery/Sanjeev_19.JPG" alt="Card image cap">
       <div class="card-header">
         About Me
       </div>
