--- a/project4/index.html
+++ b/project4/index.html
@@ -61,11 +61,10 @@
 
 <section class="index-post-container my-5">
   <div class="wrapper">
+    <h1 class="display-1 my-5 text-dark"> About Me </h1>
     <div class="card text-center">
       <img class="card-img-top" src="gallery/Sanjeev_19.JPG" alt="Card image cap" style="height: 500px">
-      <div class="card-header">
-        About Me
-      </div>
+      
       <div class="card-body">
         <h5 class="card-title">Sanjeev Mehta</h5>
         <p class="card-text lead p-5">am a Certified Public Accountant by profession,
