--- a/project4/resume.html
+++ b/project4/resume.html
@@ -45,121 +45,8 @@
           </nav>
           </section>
 <div class="container">
-    SANJEEV MEHTA, MBA, CPA
-OWNER/VP, AMORIS FINANCIAL CONSULTANTS, INC.
-
-EDUCATION/CERTIFICATION
-
-	M.B.A., Howard University
-	Certified Public Accountant (CPA), licensed in Virginia (originally MD), 1996
-	
-SECURITY CLEARANCE
-
-	Currently: Secret
-            Prior: Top Secret
-
-EXPERIENCE SUMMARY
-
-Mr. Mehta is a Senior Manager with Amoris Financial Consultants. He has more than 15 years of professional accounting, consulting, and auditing experience.  This includes audit and consulting engagements for Federal Government agencies such as the National Aeronautics and Space Administration (NASA), Department of Commerce (DOC), Department of Defense (DoD), Department of Education (ED), Department of Justice (DOJ), Department of State (DOS), and Government National Mortgage Association (GNMA).  Representative experience appears below.
-
-RELEVANT EXPERIENCE
-
-Federal Agency – Consulting	Senior Manager	06/30/2008 to Current
-
-•	Mr. Mehta is currently a Senior Manager for a Federal Agency.  On this engagement, Mr. Mehta is primarily responsible for documenting current processes related to Fund Balance With Treasury, Employee Funded and Unfunded Leave and disbursements on expired appropriations. The primary goal of this effort is to identify potential control weaknesses in the processes and recommending/implementing ameliorative measures so as to streamline the overall reporting process. 
-•	Mr. Mehta has also been responsible for formulating and assist in implementing a grant accrual policy for the agency, in conformity with Technical Bulletin 12, “Accrual Estimates for Grant Programs”. 
-•	Mr. Mehta has assisted in developing a standard policy across the agency centers’ to accurately record employee Time and Attendance records. Mr. Mehta has also been instrumental in developing and implementing guidance pertaining to agency cost accruals which include identifying and rectifying errors in recording such accruals.
-•	 Prior to the undertaking of these tasks, Mr. Mehta was primarily responsible for reconciling intra-governmental balances with other Federal trading partners.  Mr. Mehta was instrumental in developing a standard process for reconciling intra governmental transactions for the agency and developing reconciliation sheets in conformity with Treasury reporting standards. Due to his significant contribution and efforts in reconciling intra-governmental activity with other trading partners, the agency was able to eliminate its material weakness in this area.  Mr. Mehta  was a member of the Central Reporting Team, which was a group effort led by all Federal agencies attempting to reconcile intra-governmental transactions.  In addition, Mr. Mehta was responsible for review and analysis of the Standard General Ledger (SGL) balance fluctuations on a monthly basis. He was instrumental in maintaining quality control of the responses provided and consolidation of responses into a Master flux analysis file.  
-•	Mr. Mehta assisted with the generation of the center financial statements on a monthly basis.  He also updated policies and procedures pertaining to intra-governmental activity as well as procedures related to the recording of Journal Vouchers to record Federal Employees Compensation Act and Office of Personnel Management (OPM)-related employee health benefits into the agency’s SAP system.
-•	Mr. Mehta has been responsible for recommending ameliorative measures to streamline the agency’s Continuous Monitoring Program (CMP), which identifies the agency’s control activities performed by the centers. He has recommended changes and assisted in updating the Agency’s CMP Manual, which is used by agency centers to perform their accounting tasks.
-•	Mr. Mehta has been instrumental in reviewing the agency’s grants closeout process, with a view to addressing the issues identified by the agency auditors in prior years, and helping mitigate risks associated with grants closeouts.
-•	Mr. Mehta has been responsible for the review and analysis of the Agency’s trial balance and transactions used to support the preparation of financial statements, Government-wide Financial Reporting System (GFRS), Federal Agencies’ Centralized Trial Balance System (FACTS) I, FACTS II, and MAX A-11 submissions.  
-•	Mr. Mehta was involved in drafting the Notes to the Financial Statements and the Required Supplemental Information for the Fiscal Years ending 2012 through 2017.  He was responsible for a review of the Annual Financial Report (AFR) and provided comments to improve the draft versions of the report.
-
-GNMA—Consulting	Senior Manager	04/14/2008 to 06/12/2008
-
-•	Mr. Mehta served as a Senior Manager on an engagement for the Department of Housing and Urban Development’s (HUD) GNMA.  The purpose of the engagement was to assess controls over the monitoring of mortgage-backed securities issued by mortgage banks and other financial institutions.  Specifically, Mr. Mehta was responsible for assessing the adequacy of field reviews conducted by GNMA’s field review contractor to determine compliance with GNMA field review standards.  He was responsible for reviewing actions taken by account executives to ensure the timely resolution of high-risk findings determined during field reviews.  Additionally, Mr. Mehta was responsible for reviewing data integrity issues between two client systems and recommending process improvements.
-
-DOC—OMB Circular A-123 Implementation	Manager	10/01/2007 to 04/11/2008
-
-•	Mr. Mehta served as a Manager on several projects for DOC to implement Office of Management and Budget (OMB) Circular A-123, Management’s Responsibility for Internal Control, at major financial reporting components.  He completed a review of user fees charged by various DOC Bureaus, including:
-
-­	National Institute of Standards and Technology (NIST)
-­	National Oceanic and Atmospheric Administration (NOAA)
-­	Bureau of Economic Analysis
-­	Bureau of the Census
-­	National Technical Information Service
-­	Bureau of Industry and Security.
-
-Mr. Mehta was responsible for reviewing the cost components of the user fees charged by Bureaus and determining compliance with OMB Circular A-25, User Charges.  Specifically, he reviewed direct and indirect costs used to calculate user fees and determined whether Bureaus were capturing all relevant costs per the requirements of OMB Circular A-25.  Mr. Mehta also determined (based on managerial cost accounting standards) that certain programs did not qualify under the provisions of the Circular.
-
-DOC—Personal Property Assessment	Manager	04/23/2007 to 09/28/2007
-
-•	Mr. Mehta conducted an assessment of the management and tracking of personal property for the majority of DOC’s Bureaus.  Utilizing DOC’s policies and procedures, the Chief Financial Officers (CFO) Council’s Implementation Guide for OMB Circular A-123, as well as professional judgment, he evaluated the adequacy of controls throughout the property life cycle, including ordering, receipt, accountability, recurring inventories/validations, and disposition.  He also performed OMB Circular A-123 testing and analyses for the grants and purchasing cycles at multiple DOC Bureaus, including documentation of any compensating controls noted during the testing. 
-
-ED—FSA Program Quality Control Review	Manager	07/05/2007 to 07/26/2007
-
-•	Mr. Mehta performed a quality control review of ED’s Federal Student Aid (FSA) program to ensure its adherence to applicable auditing standards, requirements, and procedures for those lenders who self-audit.  He performed a quality control review of the work papers on internal controls to ensure the accuracy of the 799 SA 9.5 Percent Tax Exempt Portfolio billing in particular identification of loan generation source.  He conducted the review to assess accuracy, consistency, and completeness of the procedures in accordance with Generally Accepted Government Auditing Standards (GAGAS), the Government Auditing Standards (GAS), or Yellow Book, issued by the Comptroller General of the United States (2007 Revision), and the audit guidance provided by the ED Office of Inspector General (OIG). 
-
-IBM	Senior Consultant	08/2006 to 04/2007
-
-•	As a Senior Consultant for IBM, much of Mr. Mehta’s time was focused on work for the Department of the Navy (DoD).  He documented and flowcharted procedures for environmental liabilities, Fund Balance with Treasury (FBWT), Accounts Payable (A/P), investments, and FECA line items.  Mr. Mehta performed risk analyses of key accounting and financial management procedures affecting Financial Statement Reporting; devised and recommended internal controls for key accounting procedures in order to mitigate risk of material misstatement; assisted in performing tests of key controls; and assisted with the preparation of the Statement of Assurance on Internal Controls Over Financial Reporting for major assessable units of the DoD agency.
-
-BearingPoint	Consultant	01/2006 to 08/2006
-
-•	As a Consultant with BearingPoint, Mr. Mehta provided consulting services to the US Air Force (DoD) on a number of engagements.  
-•	Mr. Mehta was instrumental in developing and assist in implementing policy issues pertaining to Fixed Assets, Real Property, Military Equipment, Environmental Liabilities, Accounts Payable, and Accounts Receivable; assessment, analysis, and testing of internal controls in conformity with OMB Circular A-123, Appendix A; and development of key milestones/critical paths for successful assertion of line items on the financial statements.  In addition, 
-•	Mr. Mehta was instrumental in drafting a policy document pertaining to the application of GAAP accounting for creation of direct cost estimates required to report environmental liabilities on the financial statements of the Department of Defense, and determined capitalization thresholds for Fixed Assets and Real Property.
-
-MIL Corporation	Senior Accountant	01/2001 to 02/2003
-
-•	Mr. Mehta served as a Senior Accountant with MIL Corporation, where he worked on analysis and reconciliation of FBWT for various Federal appropriations.  He also completed an analysis and review of Financial Management Systems with a goal of correcting erroneous recording of transactions in the General Ledger (GL) and streamlining the GL reporting process.
-•	Mr. Mehta analyzed payroll transactions being recorded into the agency’s financial system “CFMS” with a view to identifying duplicate transactions. Due to Mr. Mehta’s efforts, the agency was able to streamline the agency’s payroll reporting process. Mr. Mehta’s efforts were duly recognized by the agency.
-
-Leon Snead & Co.	Senior Auditor	09/1999 to 12/2000
-
-•	At Leon Snead & Co., Mr. Mehta performed CFO Act audits of various Federal Government agencies.  As a Senior Auditor, he assessed internal control risks for various accounting functions, documented internal control cycles for payroll, fixed assets, cash, accounts receivable (A/R), accounts payable (A/P) and GL and reporting, performed tests of internal controls, substantive testing based on samples selected via statistical sampling, determined reportable conditions/material weaknesses, and helped in preparation of the final report.  Additionally, Mr. Mehta conducted OMB Circular A-123 reviews of Federal Government agencies.  He also has experience participating on compliance audit engagements including Financial Management Oversight Reviews of state and local Government agencies to determine their compliance with 49 CFR Part 18, “The Common Rule and OMB Circular A-87,” including audits of the Minnesota Department of Transportation (DOT), Chicago Transit Authority, and Greater Cleveland Regional Transit Authority.
-
-
-
-
-Williams Adley & Co. 	Staff Accountant/Auditor	05/1998 to 06/1999
-
-•	Mr. Mehta served as a Staff Accountant/Auditor at Williams Adley & Co., where he participated in CFO Act audits of Federal Government agencies.  His primary responsibilities included documenting internal control cycles, performing tests of controls, substantive tests, and ensuring compliance with applicable laws and regulations.  Other audits that Mr. Mehta participated in included OMB Circular A-133 single audits of D.C. agencies including the D.C. Board of Parole and D.C. Department of Corrections; non-profit organizations in accordance with Yellow Book standards; D.C. Chartered Schools; and a D.C. Government agency, during which he documented cycle memos, tested internal controls, substantively tested, and identified material weaknesses and/or reportable conditions in the internal control structure of the agency.  Mr. Mehta also participated in the financial management oversight review of state/local Government agencies in accordance with OMB Circular A-87.
-
-Bert Smith & Co.	Staff Accountant	04/1997 to 05/1998
-
-•	Mr. Mehta served as a Staff Accountant at Bert Smith & Co, where he participated in the company’s consulting engagement with a Federal agency.  His primary responsibilities included the reconciliation of A/R on an Oracle-based system.  Other responsibilities included determining eligibility of penalty waiver for delinquent premium payments sent in by ERISA plans in litigation and bankruptcy.  He also assisted in updating clients’ accounting policies and procedures.
-
-Dyncorp I&ET	Junior Accountant	06/1996 to 04/1997
-
-•	With Dyncorp I&ET, Mr. Mehta served as a Junior Accountant, reconciling Federal Cash Transactions Reports (PMS 272) on a LAN-based accounting system for a major Federal agency.  He also was responsible for monitoring Federal grant payments to academic institutions, the flow of grant payments, and ensuring accountability of the academic institution for monies received by them.
-
-COMPUTER/OTHER TECHNICAL SKILLS
-
-•	Expertise in Federal Government Financial Management systems, especially System Application and Products (SAP)
-•	Proficiency in MS Excel, MS Word, MS Access, MS Power Point, MS Visio and MS Project
-
-MEMBERSHIPS AND AFFILIATIONS
-
-•	Member – American Institute of Certified Public Accountants
-•	Member – Association of Government Accountants
-
-
-
-
-PROFESSIONAL HISTORY
-
-Amoris Financial Consultants	Owner/Senior Manager	04/2007 to Present
-IBM	Senior Consultant	08/2006 to 04/2007
-Bearing Point	Consultant	01/2006 to 08/2006
-MIL Corporation	Senior Accountant	01/2001 to 02/2003
-Leon Snead & Co PC	Senior Auditor	09/1999 to 12/2000
-Williams Adley & Co LLP	Staff Accountant/Auditor	05/1998 to 06/1999
-Bert Smith & Co PC	Staff Accountant	04/1997 to 05/1998
-Dyncorp I&ET	Junior Accountant	06/1996 to 04/1997
-
-
+    
+    <embed src="sam-resume.docx" width="800px" height="2100px" />
 </div>
         </body>
         <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
