--- a/project4/resume.html
+++ b/project4/resume.html
@@ -46,7 +46,7 @@
           </section>
 <div class="container">
     
-    <embed src="sam-resume.pdf" width="800px" height="2100px" />
+    <embed src="sam-resume.pdf" width="90vw" height="2100px" />
 </div>
         </body>
         <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
