--- a/project4/blog.html
+++ b/project4/blog.html
@@ -51,7 +51,7 @@
         <div id="popup" class="bg-black">
 
             <div id="full-post" class="container-fluid text-light"></div>
-            <button id='back' class="btn btn-primary"></button>
+            <button id='back' class="btn btn-primary">x</button>
          
         </div>
         <button class="btn btn-primary"></button>
