--- a/project4/blog.html
+++ b/project4/blog.html
@@ -50,7 +50,7 @@
         </div>
         <div id="popup" class="bg-black">
 
-            <div id="full-post" class="container-fluid text-light"></div>
+            <div id="full-post" class="container-fluid my-5 p-5 text-light"></div>
             <button id='back' class="btn btn-primary">x</button>
          
         </div>
