--- a/project4/index.html
+++ b/project4/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2117dd5e9c.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sam's Blog</title>
 </head>
 <body>
     <section class="header shadow-sm mb-4">
@@ -70,7 +70,7 @@
       
       <div class="card-body">
         <h5 class="card-title">Sanjeev Mehta</h5>
-        <p class="card-text lead p-5">am a Certified Public Accountant by profession,
+        <p class="card-text lead p-5">I am a Certified Public Accountant by profession,
            with over eighteen years of financial management consulting experience.
            I specialize in helping federal agencies improve their business
             processes by reviewing their control environment, assessing risks, and
