--- a/project4/index.html
+++ b/project4/index.html
@@ -55,7 +55,7 @@
           <div id="popup" class="bg-black">
   
               <div id="full-post" class="container-fluid text-light"></div>
-              <button id='back' class="btn btn-primary"></button>
+              <button id='back' class="btn btn-primary">x</button>
   
           </div>
           <a href="blog.html"><button class="btn btn-primary">Click to view all posts</button></a>
