--- a/project4/gallery.html
+++ b/project4/gallery.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="row">
-                        <div id="gallery">
+                        <div id="gallery" class="p-5 my-5">
 
                           
                         <!-- 	<img src="img/ImageName.jpg" width="19.375%" height="19.5%" alt=""/>
