--- a/project4/gallery.html
+++ b/project4/gallery.html
@@ -45,7 +45,7 @@
           </nav>
           </section>
 
-        <div class="wrapper p-5">
+        <div class="wrapper ">
             <div id="container">
                 <div class="row">
                     <div class="col-12 p-5">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="row">
-                        <div id="gallery" class=" my-5">
+                        <div id="gallery" class="p-5 my-5">
 
                           
                         <!-- 	<img src="img/ImageName.jpg" width="19.375%" height="19.5%" alt=""/>
